# dinduo

./: .gitignore  docker-compose.yml
backend/: Dockerfile  README.md  conftest.py  create-db-tables.sql  dinduo.sqlite  main.py  pyproject.toml  requirements.txt  test-dinduo.sqlite
backend/app/: main.py
backend/app/api/endpoints/: account.py  auth.py  card.py  category.py  expense.py  user copy.py  user.py
backend/app/api/models/: __init__.py  account.py  card.py  category.py  expense.py  user.py
backend/app/core/: auth.py  config.py  decorators.py  security.py
backend/app/db/: database.py
backend/tests/: test_account.py  test_card.py  test_category.py  test_expense.py  test_main.py  test_user.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/web/: package-lock.json  package.json
frontend/web/src/app/: layout.tsx  page.tsx
frontend/web/src/app/account/: page.tsx
frontend/web/src/app/account/components/: AccountList.tsx  AddAccountButton.tsx
frontend/web/src/app/dashboard/: Footer.tsx  Header.tsx  Sidebar.tsx  page.tsx
frontend/web/src/app/dashboard/components/: DashboardCard.tsx  Header.tsx  Sidebar.tsx
frontend/web/src/app/dashboard/profile/: page.tsx
frontend/web/src/app/login/: page.tsx
frontend/web/src/app/signup/: page.tsx
