[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Wilson Ferreira Junior <wilson.f.jr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
pytest = "^8.3.4"
httpx = "^0.28.1"
bcrypt = "^4.2.1"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

