[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Wilson Ferreira Junior <wilson.f.jr@gmail.com>"]
readme = "README.md"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*:",
    "ignore::DeprecationWarning:passlib.*:",
    "ignore::DeprecationWarning:jose.*:",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
pytest = "^8.3.4"
httpx = "^0.28.1"
bcrypt = "^4.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
pydantic-settings = "^2.7.0"
pytest-ordering = "^0.6"
fastapi-cors = "^0.0.6"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

